--- a/page2.html
+++ b/page2.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi My Mom</title>
+    <title>Secret Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Hi-My-Mom</h1>
-        <p>Website spesial buat ibuku</p>
-        <a href="page2.html" class="btn">Next</a>
+        <h1>This is Secret</h1>
+        <p>Please read alone... Don't tell anyone...</p>
+        <a href="page3.html" class="btn">Next</a>
     </div>
 </body>
 </html>
